Dir `Data`, `Interfaces`, & `Models` dokumenteret
Alle filer jeg har arbejdet med i ovenstående directories er blevet dokumenteret.

--- a/App.config
+++ b/App.config
@@ -1,16 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
+		<!--Det er lettere at hente `string`en end at sikre os at vi altid skriver det rigtigt-->
+		<!--Navne på de forskellige uddannelser, for at sikre rigtig stavning samt formatering.-->
 		<add key="itsupporter" value="IT-supporter" />
 		<add key="infrastruktur" value="Infrastruktur" />
-		<add key="programmering" value="Programmering"/>
-		<add key="vedIkke" value="Ved ikke"/>
+		<add key="programmering" value="Programmering" />
+		<add key="vedIkke" value="Ved ikke" />
 
+		<!--Navne på de forskellige skoler, for at sikre rigtig stavning samt stort forbogstav.-->
 		<add key="ballerup" value="Ballerup" />
 		<add key="lyngby" value="Lyngby" />
 		<add key="frederiksberg" value="Frederiksberg" />
 
-		<add key="outputMappe" value="..\Blanketter"/>
-		<add key="templates" value="Blanketter\\Templates\\"/>
+		<!--Navn på de forskellige blanket mapper-->
+		<add key="outputMappe" value="..\Blanketter" />
+		<add key="templates" value="Blanketter\\Templates\\" />
+
+		<!--Navn på databasen -->
+		<add key="db" value="elevDB.db" />
 	</appSettings>
 </configuration>
