Færdig med Refactoring
Fixing af blanket udskrivning, opgaver for meritview, euvview og validering af radio knapper

--- a/App.config
+++ b/App.config
@@ -7,6 +7,7 @@
 		<add key="infrastruktur" value="Infrastruktur" />
 		<add key="programmering" value="Programmering" />
 		<add key="vedIkke" value="Ved ikke" />
+    <add key="minimumGrundforløbLængde" value='16' />
 
 		<!--Navne på de forskellige skoler, for at sikre rigtig stavning samt stort forbogstav.-->
 		<add key="ballerup" value="Ballerup" />
