--- a/App.config
+++ b/App.config
@@ -13,6 +13,8 @@
 		<add key="ballerup" value="Ballerup" />
 		<add key="lyngby" value="Lyngby" />
 		<add key="frederiksberg" value="Frederiksberg" />
+		<add key="ballerupMerit" value="Ballerup (Ordinær+)" />
+		<add key="ballerupFuldt" value="Ballerup (Fuld forløb)" />
 
 		<!--Navn på de forskellige blanket mapper-->
 		<add key="outputMappe" value="..\Blanketter" />
