Combi Merit, Zip RKV

--- a/App.config
+++ b/App.config
@@ -20,6 +20,14 @@
 		<add key="outputMappe" value="..\Blanketter" />
 		<add key="templates" value="Blanketter\\Templates\\" />
 
+    <!--Endelser på udprintet blanketter-->
+    <add key="endMerit" value="_M.pdf" />
+    <add key="endRKV" value="_RKV.pdf" />
+    
+    <!--Admin fil sti-->
+    <add key="samletMerit" value="..\Blanketter\_Samlet Merit.pdf" />
+    <add key="samletRKV" value="..\Blanketter\_Samlet RKV.zip" />
+    
 		<!--Navn på databasen -->
 		<add key="db" value="elevDB.db" />
 	</appSettings>
