Ændringer til views

--- a/App.config
+++ b/App.config
@@ -28,7 +28,11 @@
     <add key="samletMerit" value="..\Blanketter\_Samlet Merit.pdf" />
     <add key="samletRKV" value="..\Blanketter\_Samlet RKV.zip" />
     
-		<!--Navn på databasen -->
+		<!--Python relateret-->
+		<add key="venv" value=".venv" />
+
+    <!--Navn på databasen -->
 		<add key="db" value="elevDB.db" />
-	</appSettings>
+
+</appSettings>
 </configuration>
