Python Implementering Klar
Implementering inde i lederView ÅbenFil.

Inde i app.config, ændre fil sti for python gruppen.

--- a/App.config
+++ b/App.config
@@ -30,6 +30,9 @@
     
 		<!--Python relateret-->
 		<add key="venv" value=".venv" />
+		<add key="pythonExe" value="C:\Python39\python.exe" />
+		<add key="pythonScript" value="C:\Users\viga\Downloads\GFElevInterviewExcel.py" />
+    
 
     <!--Navn på databasen -->
 		<add key="db" value="elevDB.db" />
