Tilføjelse af python script og ændring af sti

--- a/App.config
+++ b/App.config
@@ -30,8 +30,8 @@
     
 		<!--Python relateret-->
 		<add key="venv" value=".venv" />
-		<add key="pythonExe" value="C:\Python39\python.exe" />
-		<add key="pythonScript" value="C:\Users\viga\Downloads\GFElevInterviewExcel.py" />
+		<add key="pythonExe" value=".venv\Scripts\python.exe" />
+		<add key="pythonScript" value="GFElevInterviewExcel.py" />
     
 
     <!--Navn på databasen -->
