--- a/GFElevInterview.csproj
+++ b/GFElevInterview.csproj
@@ -74,6 +74,9 @@
     <None Update="Blanketter\Templates\Merit-blanket.docx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="GFElevInterviewExcel.py">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
