relative file position for .exe

--- a/App.config
+++ b/App.config
@@ -7,7 +7,7 @@
 		<add key="infrastruktur" value="Infrastruktur" />
 		<add key="programmering" value="Programmering" />
 		<add key="vedIkke" value="Ved ikke" />
-    <add key="minimumGrundforløbLængde" value='16' />
+		<add key="minimumGrundforløbLængde" value='16' />
 
 		<!--Navne på de forskellige skoler, for at sikre rigtig stavning samt stort forbogstav.-->
 		<add key="ballerup" value="Ballerup" />
@@ -20,22 +20,25 @@
 		<add key="outputMappe" value="..\Blanketter" />
 		<add key="templates" value="Blanketter\\Templates\\" />
 
-    <!--Endelser på udprintet blanketter-->
-    <add key="endMerit" value="_M.pdf" />
-    <add key="endRKV" value="_RKV.pdf" />
-    
-    <!--Admin fil sti-->
-    <add key="samletMerit" value="..\Blanketter\_Samlet Merit.pdf" />
-    <add key="samletRKV" value="..\Blanketter\_Samlet RKV.zip" />
-    
+		<!--Endelser på udprintet blanketter-->
+		<add key="endMerit" value="_M.pdf" />
+		<add key="endRKV" value="_RKV.pdf" />
+
+		<!--Admin fil sti-->
+		<add key="samletMerit" value="..\Blanketter\_Samlet Merit.pdf" />
+		<add key="samletRKV" value="..\Blanketter\_Samlet RKV.zip" />
+
+		<!--Excel exe-->
+		<add key="excelExe" value="ExcelRes\GFElevInterviewExcel.exe"/>
+		
 		<!--Python relateret-->
 		<add key="venv" value=".venv" />
 		<add key="pythonExe" value=".venv\Scripts\python.exe" />
 		<add key="pythonScript" value="GFElevInterviewExcel.py" />
-    
 
-    <!--Navn på databasen -->
+
+		<!--Navn på databasen -->
 		<add key="db" value="elevDB.db" />
 
-</appSettings>
+	</appSettings>
 </configuration>
