--- a/GFElevInterview.csproj
+++ b/GFElevInterview.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
     <PackageReference Include="FontAwesome.WPF" Version="4.7.0.9" />
     <PackageReference Include="FreeSpire.Doc" Version="7.11.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.2" />
